<resources>

    <string name="product_image">Product Image</string>
    <string name="add_to_favorite">Add to favorites</string>

    <!--    login-->
    <string name="login_title">Đăng nhập</string>
    <string name="welcome_text">Chào mừng</string>"
    <string name="your_info">Vui lòng nhập thông tin của bạn để tiếp tục.</string>
    <string name="enter_your_email">Tên người dùng hoặc email</string>">
    <string name="enter_your_password">Mật khẩu</string>"
    <string name="forgot_password">Quên mật khẩu?</string>"
    <string name="or_log_in_with">hoặc đăng nhập với</string>"
    <string name="don_t_have_account">Bạn không có tài khoản ?</string>"
    <string name="sign_up_now">Đăng ký ngay</string>"
    <!--    -->
    <string name="app_name">mater_electronic</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_category">Danh mục</string>
    <string name="title_mycart">Giỏ hàng</string>
    <string name="title_chatbot">Chatbot</string>
    <string name="title_profile">Hồ sơ</string>
    <string name="register_title">Đăng ký</string>
    <string name="sign_up_option_alt">Đã có tài khoản ? </string>
    <string name="sign_up_txt">Đăng ký</string>
    <string name="policy_sign_up">Nếu tiếp tục, bạn đồng ý với\n<b>Điều khoản</b> và <b>Chính sách bảo mật</b></string>
    <string name="banner_image">Banner image</string>
    <!--    -->
    <string name="forgot_pass_title">Quên mật khẩu</string>
    <string name="reset_pass_txt">Đặt lại mật khẩu ?</string>
    <string name="enter_your_email_address">Vui lòng nhập địa chỉ email của bạn</string>
    <string name="forgot_pass_continue">Tiếp tục</string>
    <!--set password-->
    <string name="set_password_title">Đặt lại mật khẩu</string>
    <string name="set_password_change_the_password">Thay đổi mật khẩu</string>
    <string name="set_password_description">Vui lòng nhập mật khẩu mới và xác nhận</string>
    <string name="set_password_enter_new_password">Nhập mật khẩu mới</string>
    <string name="set_password_hint_new_password">● ● ● ● ● ● ● ●</string>
    <string name="set_password_confirm_new_password">Xác nhận mật khẩu mới</string>
    <string name="app_title">ELECTRONIC</string>
    <string name="app_subtitle">MASTER</string>
    <string name="logout_txt">Đăng xuất</string>
    <!--    cart-->
    <string name="cart_title">Giỏ hàng</string>

    <!-- profile -->
    <string name="profile_title">Hồ sơ của tôi</string>
    <string name="accountName">Huỳnh Tấn Đạt</string>
    <string name="my_address_list">Địa Chỉ Của Tôi</string>
    <string name="my_policy">Chính Sách Riêng Tư</string>
    <string name="my_notification">Thông Báo</string>
    <string name="my_setting">Cài Đặt</string>
    <string name="my_chatbot">Trợ Giúp Chatbot</string>
    <string name="my_logout">Đăng Xuất</string>
    <!--    editprofile-->
    <string name="update">Cập nhật</string>
    <!--    detail-->
    <string name="buy_now">Mua Ngay</string>
    <string name="add_to_cart">Thêm vào giỏ</string>
    <string name="product_description">Mô Tả Sản Phẩm</string>
    <string name="customer_review">Khách Hàng Đánh Giá</string>
    <string name="no_review">Không có đánh giá nào</string>
    <!--    bottom sheet quantity-->
    <string name="quantity">Số Lượng:</string>

    <!--    Setting-->
    <string name="settingTitle">Cài đặt</string>
    <string name="settingNotification">Cài đặt thông báo</string>
    <string name="settingPasstxt">Cài đặt mật khẩu</string>
    <string name="delAccounttxt">Xóa tài khoản</string>
    <!--    Setting Pass-->
    <string name="settingPassTitle">Cài đặt mật khẩu</string>
    <string name="currPassword">Mật khẩu hiện tại</string>
    <string name="newPassTxt">Mật khẩu mới</string>
    <string name="checkNewPassTxt">Xác nhận mật khẩu</string>
    <string name="hiddenPassTxt">● ● ● ● ● ● ● ●</string>
    <string name="changePassTxt">Thay đổi</string>
    <!--    Setting Notification-->
    <string name="notifacationtext">Thông báo</string>


</resources>