<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:weightSum="10"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin_top_title"
        android:layout_marginHorizontal="@dimen/margin_lg"
        >
        <!-- Back arrow -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="Back"
            android:layout_gravity="start" />

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/forgot_pass_title"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            />
    </FrameLayout>

    <!-- Reset Password Text -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_marginHorizontal="@dimen/margin_lg"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_pass_txt"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_lg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_info"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/blur_text"
            android:layout_marginTop="@dimen/margin_xs" />
    </LinearLayout>
    <!-- Username or Email -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/reset_pass_background"
        android:layout_weight="7"
        android:padding="@dimen/margin_lg"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email_address"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_vlg"
        android:layout_marginBottom="@dimen/margin_xs"
        />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="example@example.com"
        android:background="@drawable/edittext_background2"
        android:padding="@dimen/input_padding"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/blur_text_lg" />




    <!-- Login Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_lg"
        android:background="@drawable/button_background"
        android:text="@string/forgot_pass_continue"
        android:textColor="@color/black" />

    <!-- Forgot Password -->

    </LinearLayout>

</LinearLayout>
