<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_lg"
    android:background="#FFFFFF"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_title"
        >
        <!-- Back arrow -->
        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="Back"
            android:layout_gravity="start" />

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/set_password_title"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            />
    </FrameLayout>

    <!-- Welcome Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password_change_the_password"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_lg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password_description"
        android:textSize="@dimen/medium_text_size"
        android:textColor="@color/blur_text"
        android:layout_marginTop="@dimen/margin_xs" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password_enter_new_password"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_vlg"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xs">

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_password_hint_new_password"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:inputType="textPassword"
            android:textColorHint="#D8CFC6" />

        <ImageView
            android:id="@+id/newPasswordEyeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_eye"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_xs" />
    </RelativeLayout>

    <!-- Password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password_confirm_new_password"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_md" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xs">

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_password_hint_new_password"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:inputType="textPassword"
            android:textColorHint="#D8CFC6" />

        <ImageView
            android:id="@+id/confirmPasswordEyeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_eye"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_xs" />
    </RelativeLayout>

    <!-- Login Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_pass"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_lg"
        android:background="@drawable/button_background"
        android:text="@string/set_password_title"
        android:textColor="@color/dark_primary_text" />

</LinearLayout>
