<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_margin="4dp"
    >

    <ImageView
        android:id="@+id/imgProduct"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/product_image" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#000000"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginTop="8dp" />

    <!-- Hàng chứa giá + 2 nút -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textSize="16sp"
            android:textColor="#F4B5A4"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="horizontal"
            android:gravity="end">

            <ImageView
                android:id="@+id/btnFavorite"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_circle_search"
                android:src="@drawable/ic_heart"
                android:scaleType="centerInside"
                android:padding="4dp"
                android:contentDescription="@string/add_to_favorite" />

            <ImageView
                android:id="@+id/btnAddToCart"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/bg_circle_search"
                android:src="@drawable/ic_add"
                android:scaleType="centerInside"
                android:padding="4dp"
                android:contentDescription="@string/add_to_cart" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
