<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_xs"
    >

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/tvProductName"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvProductPrice"
                android:textColor="@color/pink"
                android:textSize="@dimen/large_text_size"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvRating"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
        <TextView
            android:id="@+id/tvProductDescriptionTitle"
            android:textStyle="bold"
            android:text="Mô Tả Sản Phẩm"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvProductDescription"
            android:layout_marginTop="12dp"
            android:text="@string/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvCustomerReviewTitle"
            android:textStyle="bold"
            android:text="@string/customer_review"
            android:textSize="@dimen/large_text_size"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_sm"
            android:weightSum="2"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddToCart"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_background2"
                android:text="@string/add_to_cart"
                android:textColor="@color/dark_primary_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBuyNow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_background"
                android:text="@string/buy_now"
                android:textColor="@color/dark_primary_text" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
