<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_lg"
    tools:context=".ui.activity.profile.setting.PasswordSetting">
    <!--    Title-->
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- Back arrow -->
        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="Back"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/settingPassTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_vertical"
            android:text="@string/settingPassTitle"
            android:textColor="@color/pink"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />
    </FrameLayout>

    <!-- Password -->

    <TextView
        android:id="@+id/currPassTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/currPassword"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <RelativeLayout
        android:id="@+id/currPassLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xs"
        app:layout_constraintEnd_toEndOf="@+id/currPassTxt"
        app:layout_constraintStart_toStartOf="@+id/currPassTxt"
        app:layout_constraintTop_toBottomOf="@+id/currPassTxt">

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/hiddenPassTxt"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColorHint="#D8CFC6" />

        <ImageView
            android:id="@+id/eye_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_xs"
            android:src="@drawable/ic_eye_closed" />

    </RelativeLayout>

    <!-- Password -->

    <TextView
        android:id="@+id/newPassTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/newPassTxt"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/currPassTxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/currPassTxt"
        app:layout_constraintTop_toBottomOf="@+id/currPassTxt" />

    <RelativeLayout
        android:id="@+id/newPassLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@id/currPassLayout"
        app:layout_constraintStart_toStartOf="@id/currPassLayout"
        app:layout_constraintTop_toBottomOf="@+id/currPassLayout">
        <EditText
            android:id="@+id/newPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/hiddenPassTxt"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColorHint="#D8CFC6" />

        <ImageView
            android:id="@+id/eye_icon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_xs"
            android:src="@drawable/ic_eye_closed" />
    </RelativeLayout>

<!--    Xác nhận pass-->
    <TextView
        android:id="@+id/checkNewPassTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/checkNewPassTxt"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/newPassTxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/newPassTxt"
        app:layout_constraintTop_toBottomOf="@+id/newPassTxt" />

    <RelativeLayout
        android:id="@+id/checkNewPassLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@id/newPassLayout"
        app:layout_constraintStart_toStartOf="@id/newPassLayout"
        app:layout_constraintTop_toBottomOf="@+id/newPassLayout">
        <EditText
            android:id="@+id/checkNewPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/hiddenPassTxt"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColorHint="#D8CFC6" />

        <ImageView
            android:id="@+id/eye_icon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_xs"
            android:src="@drawable/ic_eye_closed" />
    </RelativeLayout>

    <!-- Change Pass Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changePassBtn"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:text="@string/changePassTxt"
        android:textColor="@color/dark_primary_text"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/checkNewPassLayout"
        app:layout_constraintHorizontal_bias="1.2"
        app:layout_constraintStart_toStartOf="@+id/checkNewPassLayout"
        app:layout_constraintTop_toBottomOf="@+id/checkNewPassLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>