<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margin_lg"
    tools:context=".ui.activity.profile.setting.Setting">
<!--    Title-->
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- Back arrow -->
        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="Back"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_vertical"
            android:text="@string/settingTitle"
            android:textColor="@color/pink"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/settingNotificationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vlg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/button_background"
            android:padding="8dp"
            android:src="@drawable/ic_bell" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_sm"
            android:layout_weight="1"
            android:text="@string/settingNotification"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/large_text_size" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_arrow_right"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingPassLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_sm"
        app:layout_constraintStart_toStartOf="@id/settingNotificationLayout"
        app:layout_constraintEnd_toEndOf="@id/settingNotificationLayout"
        app:layout_constraintTop_toBottomOf="@+id/settingNotificationLayout">
        <ImageView
            android:id="@+id/passIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/button_background"
            android:padding="8dp"
            android:src="@drawable/ic_key" />

        <TextView
            android:id="@+id/settingPassTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_sm"
            android:layout_weight="1"
            android:text="@string/settingPasstxt"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/large_text_size" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_arrow_right"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteAccountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_sm"
        app:layout_constraintStart_toStartOf="@id/settingPassLayout"
        app:layout_constraintEnd_toEndOf="@id/settingPassLayout"
        app:layout_constraintTop_toBottomOf="@+id/settingPassLayout">
        <ImageView
            android:id="@+id/accountIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/button_background"
            android:padding="8dp"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/deleteAccountTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_sm"
            android:layout_weight="1"
            android:text="@string/delAccounttxt"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/large_text_size" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_arrow_right"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>